batch-orchestrator/main/batch-job-scheduler/objects/BatchApexStatusEvent__e/fields/AsyncApexCallsLimit__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexCallsUsed__c</fullName>
    <label>Async Apex Calls Used</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>