batch-orchestrator/main/batch-job-scheduler/objects/BatchApexStatusEvent__e/fields/AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexJobId__c</fullName>
    <label>Async Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>