batch-orchestrator/main/batch-job-scheduler/objects/BatchApexStatusEvent__e/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>