batch-orchestrator/main/batch-job-scheduler/objects/BatchApexStatusEvent__e/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>