batch-orchestrator/main/batch-job-scheduler/objects/BatchApexStatusEvent__e/fields/MessageLong__c.field-meta.xml
<CustomField>
    <fullName>MessageLong__c</fullName>
    <label>Message (long)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>