batch-orchestrator/main/batch-job-scheduler/objects/BatchApexStatusEvent__e/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>