batch-orchestrator/main/batch-job-scheduler/objects/BatchApexStatusEvent__e/fields/SOQLQueriesUsed__c.field-meta.xml
<CustomField>
    <fullName>SOQLQueriesUsed__c</fullName>
    <label>SOQL Queries Used</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>