batch-orchestrator/main/batch-job-scheduler/objects/BatchApexStatusEvent__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>